--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.vis-hidden {
+    position: absolute;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+input:checked + .bg-white {
+    box-shadow: inset 1px 2px 5px #777;
+    transform: translateY(1px);
+    background-color: #e5e5e5;
+}
